builds/development/css/style.css
/* ... */
.person01 .about h6 {
	font-weight: bold;
	text-transform: none;
	margin: 0px;
}
.person01 .about > li {
	display: inline-block;
	padding-right: 20px;
	border-right: solid 1px orange;
}
.person01 .about > li:nth-of-type(2) {
	padding-left: 20px;
}
.person01 .about > li:last-child {
	border: none;
}
.admission-right{
	background: url(../images/img_admission.jpg) no-repeat center center;
	min-height: 612px;
	height: auto;
}
#content .container_24 {
	margin-bottom: 20px;
}
#content .container_24.last_row {
	margin-bottom: 0;
}
.img_responsive {
	width: 100%;
	height: auto;
}
.no-marg {
	margin:0;
}
.color1 {
	color:#ffffff;
	}
.color2 {
	color:#134D8C;
	}
.border_bottom {
	border-bottom: dotted 2px #327513;
	padding-bottom: 10px;
	}
.fleft{
	float: left;
}			
.fright{
	float: right;
}
noscript h2 {
	display: block;
	width: 35%;
	text-align: center;
	margin: 0 auto;
	color: #15C1E5;
}
/*=================================================================================*/
@media only screen and (max-width: 995px) {
	p, .p3, .p3-1{margin-bottom:15px}
		.p4-1, .p5, .p5-1, .p6, .p6-1, .p7, .p7-1, .p8, .p8-1{margin-bottom:20px;}
		h3{/* margin-bottom:15px !important; */}
		h6{margin-bottom:5px !important;}
	.indent-top5{padding-top:18px;}
	.indent-left6, .indent-left7{padding-left:20px;}
	.indent-bottom6-1, .indent-bottom7-1{padding-bottom:30px;}
	.img-indent5-1{margin-right:20px;}
	/*-----------------------------------------*/
	h1 a{width: 213px;height: 180px;background: url(../images/logo.png) center center no-repeat #ffffff;background-size: cover;}
	h1 a span{font-size:13px; line-height:16px; padding:116px 0 0 15px;}
	.box .indents{padding:20px;}
	.box h3{font-size:26px; line-height:32px;}
	.box h3 span{font-size:32px; line-height:38px;}
	.col-7{width:225px;}
	.person01{
		margin-top: 20px;
	}
	.person01 .about h6{
		margin: 0 !important;
	}
	.person01 .about > li {
	display: block;
	padding: 0px 0px 20px 0px;
	border: none;
	}
	.person01 .about > li:last-child {
	padding: 0px;
	border: none;
	}
	.arrange-top {
		display:table-header-group;
		}
	.arrange-bottom {
		display:table-footer-group;
		}
		
}

@media only screen and (max-width: 767px) {
	.indent-top1, .indent-top5{padding-top:0px;}
	.indent-lr{padding-left:0px; padding-right:0px;}
	.indent-right1{padding-right:0px;}
	.indent-left1, .indent-left6, .indent-left7{padding-left:0px;}
	/*-----------------------------------------*/
	header .indent-bottom{padding-bottom:20px;}
	h1{position:static; margin-bottom:20px;}
	h1 a{width: 270px;background: url(../images/logo.png) center center no-repeat #ffffff;background-size: cover;height: 195px;}
	h1 a span{font-size: 13px; padding:119px 0 0 35px;}
	.box h3{font-size:31px; line-height:38px;}
		.box h3 span {font-size:31px; line-height:38px; display:inline;}
	.footer-menu{display:none;}
	.col-7{float:none; width:100%;}
		.col-7:first-child{margin-right:0; margin-bottom:30px;}
	.fright{float: none; display: block;}
	noscript h2 {width: 90%;}
}

@media only screen and (max-width: 479px) {
	h1 a{width: 215px;background: url(../images/logo.png) center center no-repeat #FFFFFF;background-size: cover;height: 160px;}
	h1 a span{font-size:13px; line-height:16px; padding:116px 0 0 15px;}
	.footer-text span{display:block; margin-right:0;}
}
nav{float: right; max-width:650px;/* min-height:100px; *//* margin-left: 285px; */}
.menu {list-style:none;}
.menu > li {
	position:relative;
	float:left;
	font:bold 15px/19px "Trebuchet MS", Arial, Helvetica, sans-serif;
	text-transform:uppercase;
}
	.menu > li > a {
		display:block;
		color:#fff;
		padding: 31px 25px 27px;
		white-space:nowrap;
	}
		.menu > li > a:hover{text-decoration:none;}
		.menu > li.sfHover > a, .menu > li.current > a {padding-bottom:36px !important; padding-top:31px !important;}
	.menu .menu-arrow{display:none;}
/***submenu***/
.menu ul {
	position:absolute;
	top:-999em;
	width: 150px;
	display:none;
	/* padding:20px; */
	background:#000;
	z-index:999;
}
.menu li li{
	width:100%;
	padding:0;
	/* margin-bottom:10px; */
	font:normal 14px/17px "Trebuchet MS", Arial, Helvetica, sans-serif;
	position:relative;
}
	.menu li li a{color:#fff;display: block;padding: 10px;transition: background .5s;}
		.menu li li > a:hover,.menu li li.sfHover > a{color: #020202; text-decoration:none;background: #BDBDBD;}
.menu li:hover ul, .menu li.sfHover ul {left:0; top:87px;}
.menu li:hover li ul, .menu li.sfHover li ul {top:-999em;}

@media only screen and (max-width: 995px){
	nav{max-width:530px;}
	.menu li {font-size:13px !important; line-height:16px !important;}
	.menu > li > a {padding: 31px 18px 27px;}
	.menu .menu-arrow{display:block; width:100%; height:6px; overflow:hidden; text-indent:-999em; font-size:0; line-height:0; background:url(../images/menu-arrow.gif) center top no-repeat; margin-bottom:-6px;}
	/***submenu***/
	.menu li:hover ul, .menu li.sfHover ul {top:85px;}
}

@media only screen and (max-width: 767px) {
	nav{width:100%;}
	.menu > li {float:none; margin-right:0px;}
	.menu > li > a{padding:15px 20px !important;}
		.menu > li > a:hover, .menu > li.sfHover > a, .menu > li.current > a {padding:11px 16px !important; border-width:4px; border-style:solid;}
			.menu > li > a.bg-color1:hover, .menu > li.sfHover > a.bg-color1, .menu > li.current > a.bg-color1 {border-color:#88a70e;}
			.menu > li > a.bg-color2:hover, .menu > li.sfHover > a.bg-color2, .menu > li.current > a.bg-color2 {border-color:#cf8300;}
			.menu > li > a.bg-color3:hover, .menu > li.sfHover > a.bg-color3, .menu > li.current > a.bg-color3 {border-color:#af1e1e;}
			.menu > li > a.bg-color4:hover, .menu > li.sfHover > a.bg-color4, .menu > li.current > a.bg-color4 {border-color:#0ba1c0;}
	.menu .menu-arrow{display:inline-block; width:9px; margin:0 0 0 5px; vertical-align:middle;}
	/***submenu***/
	.menu ul {position:static; width:auto;}
	.menu li li{/* margin-bottom:15px; */}
}

